cleanup package.json

--- a/package.json
+++ b/package.json
@@ -13,31 +13,29 @@
         "preinstall": "node prevent_npm_install.js",
         "postinstall": "pnpm build",
         "_x_preinstall": "npm i browserify -g",
-        "bootstrap": "pnpm recursive install && lerna bootstrap --concurrency 10 --ignore-scripts",
-        "bootstrap-fast": "pnpm recursive install",
-        "build1": "lerna --stream --sort --concurrency=1 run build",
-        "build": "npm run generateWithPNPM && tsc -b packages",
-        "generateWithPNPM": "pnpm recursive run generate",
-        "generateWithLerna": "lerna run generate",
-        "pretest": "lerna run pretest",
+        "obsolete:bootstrap": "pnpm recursive install && lerna bootstrap --concurrency 10 --ignore-scripts",
+        "obsolete:bootstrap-fast": "pnpm recursive install",
+        "obsolete:build1": "lerna --stream --sort --concurrency=1 run build",
+        "obsolete:testlerna": "lerna run --concurrency  8 --no-sort --stream test",
+        "obsolete:ncu_": "npx npm-check --skip-unused -ayu && lerna exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
+        "obsolete:test1": "cd packages && node run_all_mocha_tests.js",
+        "build": "npm run generate && tsc -b packages",
+        "generate": "pnpm recursive run generate",
+        "pretest": "pnpm recursive run pretest",
         "_old_test": "cd source && mocha test --color -R spec --recursive --timeout 200000 --bail",
         "test": "cd packages && node --expose-gc --max-old-space-size=1024 run_all_mocha_tests.js",
-        "test1": "cd packages && node run_all_mocha_tests.js",
-        "testlerna": "lerna run --concurrency  8 --no-sort --stream test",
         "eslint": "eslint packages/**/src/*.js  packages/**/source/*.ts packages/**/test_helpers/*",
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && lerna exec --concurrency 10 --sort --stream ncu -- -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
-        "ncu_": "npx npm-check --skip-unused -ayu && lerna exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && ncu --deep -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
-        "lebab-let": "lerna exec lebab  --replace index.js  --transform let && lerna exec lebab  --replace test  --transform let && lerna exec lebab  --replace src  --transform let",
-        "licences": " npx license-checker --production --summary",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
         "typedoc": "npx typedoc@0.21  --excludePrivate --excludeProtected --excludeInternal -options typedoc.config.json",
         "legal": "npx legally",
         "legal2": "npx npm-license-crawler",
+        "legal3": " npx license-checker --production --summary",
         "publish:lerna": "pnpm m run clean && npx rimraf packages/node_modules packages/*/dist  packages/*/*.tsbuildinfo && pnpm m i && npx lerna publish"
     },
     "repository": {
@@ -121,7 +119,6 @@
         "hjson": "^3.2.2",
         "humanize": "0.0.9",
         "js2xmlparser": "^5.0.0",
-        "lerna": "7.2.0",
         "lockfile": "^1.0.4",
         "lodash": "4.17.21",
         "long": "^4.0.0",
