update packages ( node-opcua-crypto@4.5.0 )

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && ncu --deep -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest --packageFile package.json ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && ncu --deep -u --timeout 100000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest ",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
@@ -125,8 +125,8 @@
         "memfs": "^4.2.1",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
-        "node-opcua-crypto": "4.4.0",
-        "node-opcua-pki": "4.6.0",
+        "node-opcua-crypto": "4.5.0",
+        "node-opcua-pki": "4.7.0",
         "object.values": "^1.1.7",
         "pretty-ms": "^8.0.0",
         "progress": "^2.0.3",
@@ -144,6 +144,7 @@
         "underscore": "^1.13.6",
         "vorpal": "^1.12.0",
         "vorpal-repl": "^1.1.8",
+        "winston": "*",
         "wordwrap": "^1.0.0",
         "wrap-text": "^1.0.9",
         "xml-writer": "^1.7.0",
