--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,10 +9,11 @@
     },
     "dependencies": {
         "@types/bcryptjs": "^2.4.3",
-        "bcryptjs": "^2.4.0",
+        "bcryptjs": "^2.4.3",
         "chalk": "4.1.2",
         "node-opcua": "2.112.0",
         "node-opcua-client": "2.112.0",
+        "node-opcua-debug": "2.112.0",
         "node-opcua-modeler": "2.112.0",
         "readline": "*",
         "winston": "*"
