--- a/packages/node-opcua-pseudo-session/package.json
+++ b/packages/node-opcua-pseudo-session/package.json
@@ -25,6 +25,7 @@
         "node-opcua-service-translate-browse-path": "2.114.0",
         "node-opcua-service-write": "2.114.0",
         "node-opcua-status-code": "2.114.0",
+        "node-opcua-utils" : "2.114.0",
         "node-opcua-types": "2.114.0",
         "node-opcua-variant": "2.114.0",
         "thenify": "^3.3.1"
