--- a/packages/node-opcua-local-discovery-server/package.json
+++ b/packages/node-opcua-local-discovery-server/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "env-paths": "2.2.1",
         "node-opcua": "2.115.0",
+        "node-opcua-debug": "2.114.0",
         "vorpal": "^1.12.0",
         "vorpal-repl": "^1.1.8",
         "yargs": "15.4.1"
