factor out node-opcua-alarm-condition module

--- a/packages/node-opcua-alarm-condition/tsconfig.json
+++ b/packages/node-opcua-alarm-condition/tsconfig.json
@@ -5,12 +5,11 @@
         "outDir": "dist",
         "composite": true
     },
-    "include": ["source/*.ts", "source/**/*.ts"],
+    "include": ["source/*.ts"],
     "references": [
         {
             "path": "../node-opcua-assert"
-        },
-        {
+        },{
             "path": "../node-opcua-constants"
         },
         {
