--- a/packages/node-opcua-client/tsconfig.json
+++ b/packages/node-opcua-client/tsconfig.json
@@ -13,6 +13,9 @@
             "path": "../node-opcua-assert"
         },
         {
+            "path": "../node-opcua-alarm-condition"
+        },
+        {
             "path": "../node-opcua-address-space"
         },
         {
