--- a/packages/node-opcua-alarm-condition/package.json
+++ b/packages/node-opcua-alarm-condition/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "node-opcua-assert": "2.105.0",
         "node-opcua-basic-types": "2.118.0",
+        "node-opcua-constants":"2.114.0",
         "node-opcua-data-model": "2.118.0",
         "node-opcua-debug": "2.118.0",
         "node-opcua-nodeid": "2.118.0",
