node-opcua-nodeset: refactor index_web

--- a/packages/node-opcua-nodesets/tsconfig.json
+++ b/packages/node-opcua-nodesets/tsconfig.json
@@ -7,7 +7,7 @@
   },
   "include": [
     "source/**/*.ts"
-  ],
+, "source/nodeset_catalog.ts"  ],
   "references": [],
   "exclude": [
     "node_modules",
