--- a/packages/node-opcua-nodeset-machinery/package.json
+++ b/packages/node-opcua-nodeset-machinery/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "node-opcua-address-space-base": "2.120.0",
         "node-opcua-basic-types": "2.120.0",
+        "node-opcua-data-access": "2.120.0",
         "node-opcua-data-model": "2.120.0",
         "node-opcua-nodeid": "2.120.0",
         "node-opcua-nodeset-di": "2.120.0",
