--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
-    - run: npm install -g pnpm
+    - run: npm install -g pnpm@8
     - run: pnpm run consistency
     - run: pnpm recursive install --no-frozen-lockfile
     - run: pnpm run build
@@ -66,7 +66,7 @@ jobs:
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
-    - run: npm install -g pnpm
+    - run: npm install -g pnpm@8
     - run: pnpm run consistency
     - run: pnpm recursive install --no-frozen-lockfile
     - run: pnpm run build
@@ -98,7 +98,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store
       - run: npm install -g nyc@15 istanbul coveralls codecov
       # - run: npm install -g codeclimate-test-reporter
-      - run: npm install -g pnpm
+      - run: npm install -g pnpm@8
       - run: pnpm recursive install --no-frozen-lockfile
       - run: pnpm run build 
       - run: hostname 
