--- a/packages/node-opcua-client-crawler/package.json
+++ b/packages/node-opcua-client-crawler/package.json
@@ -1,9 +1,11 @@
 {
     "name": "node-opcua-client-crawler",
+    "private": false,
     "version": "2.124.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
-    "description": "pure nodejs OPCUA SDK - module client-crawler",
+    "deprecated": true,
+    "description": "pure nodejs OPCUA SDK - module client-crawler (deprecated - use @sterfive/crawler module instead)",
     "scripts": {
         "lint": "eslint source test",
         "format": "prettier --write source test",
@@ -14,22 +16,12 @@
     "dependencies": {
         "async": "^3.2.5",
         "chalk": "4.1.2",
-        "node-opcua-address-space": "2.124.0",
-        "node-opcua-assert": "2.120.0",
-        "node-opcua-client": "2.124.0",
-        "node-opcua-constants": "2.121.0",
-        "node-opcua-data-model": "2.121.0",
-        "node-opcua-data-value": "2.121.0",
-        "node-opcua-debug": "2.121.0",
-        "node-opcua-nodeid": "2.121.0",
-        "node-opcua-service-browse": "2.123.0",
-        "node-opcua-status-code": "2.121.0",
-        "node-opcua-types": "2.123.0",
-        "node-opcua-utils": "2.120.0",
         "thenify": "^3.3.1"
     },
+    "peerDependencies": {
+        "node-opcua-client": ">=2.124.0"
+    },
     "devDependencies": {
-        "node-opcua-pseudo-session": "2.124.0",
         "should": "^13.2.3",
         "sinon": "^17.0.1"
     },
