--- a/packages/node-opcua-client-crawler/package.json
+++ b/packages/node-opcua-client-crawler/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-opcua-client-crawler",
     "private": false,
-    "version": "2.124.0",
+    "version": "2.125.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "deprecated": true,
@@ -21,17 +21,16 @@
     "peerDependencies": {
         "node-opcua-client": ">=2.124.0"
     },
-    "optionalDependencies": {},
     "devDependencies": {
-        "should": "^13.2.3",
-        "sinon": "^18.0.0",
-        "node-opcua": "2.124.0",
+        "node-opcua": "2.125.0",
+        "node-opcua-address-space": "2.125.0",
         "node-opcua-assert": "2.120.0",
-        "node-opcua-address-space": "2.124.0",
-        "node-opcua-data-model": "2.121.0",
-        "node-opcua-nodeid": "2.121.0",
-        "node-opcua-debug": "2.121.0",
-        "node-opcua-constants": "2.121.0"
+        "node-opcua-constants": "2.125.0",
+        "node-opcua-data-model": "2.125.0",
+        "node-opcua-debug": "2.125.0",
+        "node-opcua-nodeid": "2.125.0",
+        "should": "^13.2.3",
+        "sinon": "^18.0.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
