update and cleanup packages

--- a/packages/node-opcua-aggregates/package.json
+++ b/packages/node-opcua-aggregates/package.json
@@ -28,8 +28,7 @@
     },
     "devDependencies": {
         "node-opcua-leak-detector": "2.125.0",
-        "node-opcua-nodesets": "2.121.0",
-        "should": "^13.2.3"
+        "node-opcua-nodesets": "2.121.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
