--- a/packages/node-opcua-basic-types/package.json
+++ b/packages/node-opcua-basic-types/package.json
@@ -20,10 +20,8 @@
         "node-opcua-status-code": "2.125.0"
     },
     "devDependencies": {
-        "@types/node": "20.14.5",
         "node-opcua-benchmarker": "2.125.0",
-        "node-opcua-debug": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-debug": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
