--- a/packages/node-opcua-service-call/package.json
+++ b/packages/node-opcua-service-call/package.json
@@ -19,8 +19,7 @@
     },
     "devDependencies": {
         "node-opcua-packet-analyzer": "2.126.0",
-        "node-opcua-status-code": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-status-code": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
