--- a/packages/node-opcua-binary-stream/package.json
+++ b/packages/node-opcua-binary-stream/package.json
@@ -15,8 +15,7 @@
         "node-opcua-buffer-utils": "2.125.0"
     },
     "devDependencies": {
-        "node-opcua-benchmarker": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-benchmarker": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
