--- a/packages/node-opcua-certificate-manager/package.json
+++ b/packages/node-opcua-certificate-manager/package.json
@@ -24,10 +24,7 @@
         "thenify": "^3.3.1"
     },
     "devDependencies": {
-        "mocha": "^10.4.0",
-        "node-opcua-leak-detector": "2.125.0",
-        "rimraf": "3.0.2",
-        "should": "^13.2.3"
+        "node-opcua-leak-detector": "2.125.0"
     },
     "eslintConfig": {
         "env": {
