--- a/packages/node-opcua-convert-nodeset-to-javascript/package.json
+++ b/packages/node-opcua-convert-nodeset-to-javascript/package.json
@@ -34,8 +34,7 @@
     "devDependencies": {
         "node-opcua-leak-detector": "2.125.0",
         "node-opcua-packet-analyzer": "2.126.0",
-        "node-opcua-service-translate-browse-path": "2.126.0",
-        "should": "^13.2.3"
+        "node-opcua-service-translate-browse-path": "2.126.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
