--- a/packages/node-opcua-data-access/package.json
+++ b/packages/node-opcua-data-access/package.json
@@ -16,8 +16,7 @@
         "node-opcua-types": "2.126.0"
     },
     "devDependencies": {
-        "node-opcua-assert": "2.120.0",
-        "should": "^13.2.3"
+        "node-opcua-assert": "2.120.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
