--- a/packages/node-opcua-data-model/package.json
+++ b/packages/node-opcua-data-model/package.json
@@ -22,8 +22,7 @@
         "node-opcua-status-code": "2.125.0"
     },
     "devDependencies": {
-        "node-opcua-packet-analyzer": "2.126.0",
-        "should": "^13.2.3"
+        "node-opcua-packet-analyzer": "2.126.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
