--- a/packages/node-opcua-date-time/package.json
+++ b/packages/node-opcua-date-time/package.json
@@ -18,9 +18,7 @@
     "devDependencies": {
         "bignumber.js": "^9.1.2",
         "node-opcua-benchmarker": "2.125.0",
-        "node-opcua-debug": "2.125.0",
-        "should": "^13.2.3",
-        "sinon": "^18.0.0"
+        "node-opcua-debug": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
