--- a/packages/node-opcua-enum/package.json
+++ b/packages/node-opcua-enum/package.json
@@ -12,8 +12,7 @@
     "@types": "./dist/index.d.ts",
     "devDependencies": {
         "enum": "3.0.4",
-        "node-opcua-benchmarker": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-benchmarker": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
