--- a/packages/node-opcua-file-transfer/package.json
+++ b/packages/node-opcua-file-transfer/package.json
@@ -36,8 +36,7 @@
         "node-opcua": "2.127.1",
         "node-opcua-client": "2.127.1",
         "node-opcua-leak-detector": "2.125.0",
-        "node-opcua-nodesets": "2.121.0",
-        "should": "^13.2.3"
+        "node-opcua-nodesets": "2.121.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
