--- a/packages/node-opcua-nodeid/package.json
+++ b/packages/node-opcua-nodeid/package.json
@@ -17,8 +17,7 @@
     },
     "devDependencies": {
         "node-opcua-benchmarker": "2.125.0",
-        "node-opcua-debug": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-debug": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
