--- a/packages/node-opcua-numeric-range/package.json
+++ b/packages/node-opcua-numeric-range/package.json
@@ -22,8 +22,7 @@
     },
     "devDependencies": {
         "node-opcua-packet-analyzer": "2.126.0",
-        "node-opcua-test-helpers": "2.120.0",
-        "should": "^13.2.3"
+        "node-opcua-test-helpers": "2.120.0"
     },
     "repository": {
         "type": "git",
