--- a/packages/node-opcua-packet-analyzer/package.json
+++ b/packages/node-opcua-packet-analyzer/package.json
@@ -24,8 +24,7 @@
     },
     "devDependencies": {
         "node-opcua-nodeid": "2.125.0",
-        "node-opcua-test-helpers": "2.120.0",
-        "should": "^13.2.3"
+        "node-opcua-test-helpers": "2.120.0"
     },
     "repository": {
         "type": "git",
