--- a/packages/node-opcua-schemas/package.json
+++ b/packages/node-opcua-schemas/package.json
@@ -23,11 +23,9 @@
         "node-opcua-xml2json": "2.125.0"
     },
     "devDependencies": {
-        "mocha": "^10.4.0",
         "node-opcua-data-model": "2.126.0",
         "node-opcua-packet-analyzer": "2.126.0",
-        "node-opcua-utils": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-utils": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
