--- a/packages/node-opcua-secure-channel/package.json
+++ b/packages/node-opcua-secure-channel/package.json
@@ -40,9 +40,7 @@
         "node-opcua-service-read": "2.126.0",
         "node-opcua-service-session": "2.126.0",
         "node-opcua-test-fixtures": "2.126.0",
-        "node-opcua-test-helpers": "2.120.0",
-        "should": "^13.2.3",
-        "sinon": "^18.0.0"
+        "node-opcua-test-helpers": "2.120.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
