--- a/packages/node-opcua-service-read/package.json
+++ b/packages/node-opcua-service-read/package.json
@@ -18,8 +18,7 @@
     },
     "devDependencies": {
         "node-opcua-nodeid": "2.125.0",
-        "node-opcua-packet-analyzer": "2.126.0",
-        "should": "^13.2.3"
+        "node-opcua-packet-analyzer": "2.126.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
