--- a/packages/node-opcua-service-secure-channel/package.json
+++ b/packages/node-opcua-service-secure-channel/package.json
@@ -20,8 +20,7 @@
         "node-opcua-buffer-utils": "2.125.0",
         "node-opcua-debug": "2.125.0",
         "node-opcua-packet-analyzer": "2.126.0",
-        "node-opcua-status-code": "2.125.0",
-        "should": "^13.2.3"
+        "node-opcua-status-code": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
