--- a/packages/node-opcua-service-session/package.json
+++ b/packages/node-opcua-service-session/package.json
@@ -14,8 +14,7 @@
         "node-opcua-types": "2.126.0"
     },
     "devDependencies": {
-        "node-opcua-service-endpoints": "2.126.0",
-        "should": "^13.2.3"
+        "node-opcua-service-endpoints": "2.126.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
