--- a/packages/node-opcua-transport/package.json
+++ b/packages/node-opcua-transport/package.json
@@ -26,9 +26,7 @@
         "node-opcua-utils": "2.125.0"
     },
     "devDependencies": {
-        "node-opcua-leak-detector": "2.125.0",
-        "should": "^13.2.3",
-        "sinon": "^18.0.0"
+        "node-opcua-leak-detector": "2.125.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
