--- a/package.json
+++ b/package.json
@@ -140,8 +140,8 @@
         "treeify": "^1.1.0",
         "tslib": "^2.6.3",
         "underscore": "^1.13.6",
-        "vorpal-repl": "^1.1.8",
         "vorpal": "^1.12.0",
+        "vorpal-repl": "^1.1.8",
         "winston": "*",
         "wordwrap": "^1.0.0",
         "wrap-text": "^1.0.9",
@@ -150,5 +150,16 @@
     },
     "funding": {
         "url": "https://github.com/sponsors/erossignon"
+    },
+    "pnpm": {
+        "overrides": {
+            "lodash@<4.17.11": ">=4.17.11",
+            "shelljs@<0.8.5": ">=0.8.5",
+            "lodash@<4.17.21": ">=4.17.21",
+            "lodash@>=3.7.0 <4.17.19": ">=4.17.19",
+            "lodash@<4.17.5": ">=4.17.5",
+            "lodash@<4.17.12": ">=4.17.12",
+            "braces@<3.0.3": ">=3.0.3"
+        }
     }
 }
