--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -46,6 +46,8 @@
         { "path": "node-opcua-alarm-condition" },
         { "path": "node-opcua-types" },
         { "path": "node-opcua-units" },
+        { "path": "node-opcua-client" },
+        { "path": "node-opcua-server" },
         { "path": "node-opcua-client-crawler" }
     ]
 }
