--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,12 +25,12 @@ jobs:
           - node-version: 20.x
             SECURITY_REVERT_CVE_2023_46809: "--security-revert=CVE-2023-46809"
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v3
+    - uses: actions/cache@v4
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x ]
+        node-version: [16.x, 18.x, 20.x, 22.x ]
         include:
           - node-version: 18.x
             SECURITY_REVERT_CVE_2023_46809: "--security-revert=CVE-2023-46809"
@@ -57,12 +57,12 @@ jobs:
             SECURITY_REVERT_CVE_2023_46809: "--security-revert=CVE-2023-46809"
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: actions/cache@v3
+    - uses: actions/cache@v4
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
@@ -87,12 +87,12 @@ jobs:
           - node-version: 20.x
             SECURITY_REVERT_CVE_2023_46809: "--security-revert=CVE-2023-46809"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}  
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-store
