--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,long,chalk,case-anything,rimraf --target=latest ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything --target=latest ",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
@@ -91,7 +91,7 @@
         "@types/lodash": "4.17.9",
         "@types/long": "^5.0.0",
         "@types/mkdirp": "1.0.2",
-        "@types/rimraf": "^4.0.5",
+        "@types/rimraf": "4.0.5",
         "@types/sinon": "17.0.3",
         "@types/underscore": "^1.11.15",
         "@types/wordwrap": "^1.0.3",
@@ -120,7 +120,7 @@
         "js2xmlparser": "^5.0.0",
         "lockfile": "^1.0.4",
         "lodash": "4.17.21",
-        "long": "^4.0.0",
+        "long": "5.2.3",
         "memfs": "^4.12.0",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
@@ -129,7 +129,7 @@
         "object.values": "^1.2.0",
         "pretty-ms": "^9.1.0",
         "progress": "^2.0.3",
-        "rimraf": "3.0.2",
+        "rimraf": "6.0.1",
         "semver": "^7.6.3",
         "set-prototype-of": "^1.0.0",
         "shebang-loader": "^0.0.1",
