--- a/packages/node-opcua-date-time/package.json
+++ b/packages/node-opcua-date-time/package.json
@@ -10,7 +10,7 @@
         "test": "mocha"
     },
     "dependencies": {
-        "long": "^4.0.0",
+        "long": "5.2.3",
         "node-opcua-assert": "2.120.0",
         "node-opcua-binary-stream": "2.128.0",
         "node-opcua-utils": "2.128.0"
