--- a/package.json
+++ b/package.json
@@ -14,23 +14,16 @@
         "preinstall": "node prevent_npm_install.js",
         "postinstall": "pnpm build",
         "_x_preinstall": "npm i browserify -g",
-        "obsolete:bootstrap": "pnpm recursive install && lerna bootstrap --concurrency 10 --ignore-scripts",
-        "obsolete:bootstrap-fast": "pnpm recursive install",
-        "obsolete:build1": "lerna --stream --sort --concurrency=1 run build",
-        "obsolete:testlerna": "lerna run --concurrency  8 --no-sort --stream test",
-        "obsolete:ncu_": "npx npm-check --skip-unused -ayu && lerna exec --sort --concurrency 1 --stream -- npx npm-check --skip-unused -ayu",
-        "obsolete:test1": "cd packages && node run_all_mocha_tests.js",
         "build": "npm run generate && tsc -b packages",
         "generate": "pnpm recursive run generate",
         "pretest": "pnpm recursive run pretest",
-        "_old_test": "cd source && mocha test --color -R spec --recursive --timeout 200000 --bail",
         "test": "cd packages && node --expose-gc ${SECURITY_REVERT_CVE_2023_46809} --max-old-space-size=1024 run_all_mocha_tests.js",
         "test:win": "cd packages && node --expose-gc %SECURITY_REVERT_CVE_2023_46809% --max-old-space-size=1024 run_all_mocha_tests.js",
         "eslint": "eslint packages/**/src/*.js  packages/**/source/*.ts packages/**/test_helpers/*",
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
-        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything --target=latest ",
+        "ncu": "ncu -u -x mkdirp,@types/mkdirp,yargs,env-paths,long,@types/long,cli-truncate,chalk,case-anything --target=latest && ncu --deep -u --timeout 400000  -x mkdirp,@types/mkdirp,yargs,env-paths,cli-truncate,chalk,case-anything,long,@types/long --target=latest ",
         "prettier-watch": "onchange \"packages/*/(src|test|source)/**/*.(js|ts)\" -v -p -- prettier --write {{changed}}",
         "alex": "npx alex documentation/*.md",
         "cost-of-modules": "npx cost-of-modules",
@@ -39,7 +32,8 @@
         "legal": "npx legally",
         "legal2": "npx npm-license-crawler",
         "legal3": " npx license-checker --production --summary",
-        "publish:lerna": "pnpm m run clean && npx rimraf packages/node_modules packages/*/dist  packages/*/*.tsbuildinfo && pnpm m i && npx lerna publish"
+        "publish:lerna": "pnpm m run clean && npx rimraf packages/node_modules packages/*/dist  packages/*/*.tsbuildinfo && pnpm m i && npx lerna publish",
+        "makelinks": "npx tsx ../make-links/makelinks.ts"
     },
     "repository": {
         "type": "git",
