--- a/documentation/tsconfig.json
+++ b/documentation/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "moduleResolution": "node",
+        "moduleResolution": "NodeNext",
         "target":"es2017",
         "lib": ["es2015","es2015.promise"]
     }
