--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
         "@types/async": "^3.2.24",
         "@types/bonjour": "^3.5.13",
         "@types/lodash": "4.17.13",
-        "@types/long": "^5.0.0",
+        "@types/long": "4.0.0",
         "@types/mkdirp": "1.0.2",
         "@types/sinon": "17.0.3",
         "@types/underscore": "^1.13.0",
@@ -112,7 +112,7 @@
         "js2xmlparser": "^5.0.0",
         "lockfile": "^1.0.4",
         "lodash": "4.17.21",
-        "long": "5.2.3",
+        "long": "4.0.0",
         "memfs": "^4.14.0",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
