--- a/packages/node-opcua-modeler/package.json
+++ b/packages/node-opcua-modeler/package.json
@@ -34,7 +34,7 @@
         "yargs": "15.4.1"
     },
     "devDependencies": {
-        "should": "13.2.3",
+        "should": "^13.2.3",
         "node-opcua-leak-detector": "2.133.0"
     },
     "repository": {
