--- a/packages/node-opcua-modeler/package.json
+++ b/packages/node-opcua-modeler/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-opcua-modeler",
-    "version": "2.136.0",
+    "version": "2.137.0",
     "description": "pure nodejs OPCUA SDK - module modeler",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -14,28 +14,28 @@
     "dependencies": {
         "cli-table3": "^0.6.5",
         "csv-parse": "5.5.6",
-        "node-opcua-address-space": "2.136.0",
-        "node-opcua-address-space-base": "2.134.0",
+        "node-opcua-address-space": "2.137.0",
+        "node-opcua-address-space-base": "2.137.0",
         "node-opcua-assert": "2.120.0",
         "node-opcua-basic-types": "2.134.0",
-        "node-opcua-client-dynamic-extension-object": "2.134.0",
+        "node-opcua-client-dynamic-extension-object": "2.137.0",
         "node-opcua-constants": "2.125.0",
-        "node-opcua-data-model": "2.134.0",
+        "node-opcua-data-model": "2.137.0",
         "node-opcua-debug": "2.133.0",
-        "node-opcua-factory": "2.134.0",
+        "node-opcua-factory": "2.137.0",
         "node-opcua-nodeid": "2.133.0",
-        "node-opcua-nodesets": "2.121.0",
-        "node-opcua-numeric-range": "2.134.0",
-        "node-opcua-schemas": "2.134.0",
-        "node-opcua-service-translate-browse-path": "2.134.0",
+        "node-opcua-nodesets": "2.137.0",
+        "node-opcua-numeric-range": "2.137.0",
+        "node-opcua-schemas": "2.137.0",
+        "node-opcua-service-translate-browse-path": "2.137.0",
         "node-opcua-status-code": "2.133.0",
-        "node-opcua-types": "2.134.0",
-        "node-opcua-variant": "2.134.0",
+        "node-opcua-types": "2.137.0",
+        "node-opcua-variant": "2.137.0",
         "yargs": "15.4.1"
     },
     "devDependencies": {
-        "should": "^13.2.3",
-        "node-opcua-leak-detector": "2.133.0"
+        "node-opcua-leak-detector": "2.133.0",
+        "should": "^13.2.3"
     },
     "repository": {
         "type": "git",
