--- a/packages/node-opcua-nodeset-ijt/package.json
+++ b/packages/node-opcua-nodeset-ijt/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "node-opcua-nodeset-amb",
+    "name": "node-opcua-nodeset-ijt",
     "version": "2.137.0",
-    "description": "pure nodejs OPCUA SDK - module node-opcua-nodeset-amb",
+    "description": "pure nodejs OPCUA SDK - module node-opcua-nodeset-ijt",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
@@ -12,9 +12,11 @@
     "dependencies": {
         "node-opcua-address-space-base": "2.137.0",
         "node-opcua-basic-types": "2.134.0",
+        "node-opcua-data-access": "2.137.0",
         "node-opcua-data-model": "2.137.0",
         "node-opcua-extension-object": "2.137.0",
         "node-opcua-nodeid": "2.133.0",
+        "node-opcua-nodeset-machinery": "2.137.0",
         "node-opcua-nodeset-ua": "2.137.0",
         "node-opcua-variant": "2.137.0"
     },
