chore: replace deprecated vorpal by @inquire/prompt

--- a/packages/node-opcua-local-discovery-server/Dockerfile
+++ b/packages/node-opcua-local-discovery-server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:21.7.3-alpine3.18
+FROM node:22-alpine
 WORKDIR /root
 COPY package.json .
 RUN npm init -y && npm install 
@@ -6,8 +6,8 @@ ENV HOSTNAME=%fqdn%
 EXPOSE 4840/tcp
 # expose mDNS bonjour port for zero conf
 EXPOSE 5353/udp 
-COPY ./bin/local-discovery-server.js .
+COPY ./bin/local-discovery-server.mjs .
 RUN which node
-ENTRYPOINT  ["/usr/local/bin/node" , "/root/local-discovery-server.js"]
+ENTRYPOINT  ["/usr/local/bin/node" , "/root/local-discovery-server.mjs"]
 CMD [""]
 #  docker run -it  -p 4840:4840 -v c:\temp\_config:/root/.config lds
