--- a/package.json
+++ b/package.json
@@ -57,25 +57,34 @@
         "packages_extra/*"
     ],
     "devDependencies": {
-        "@types/mocha": "^10.0.9",
-        "@types/node": "22.9.1",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "22.10.2",
         "app-module-path": "^2.2.0",
         "benchmark": "^2.1.4",
         "bignumber.js": "^9.1.2",
-        "csv": "^6.3.10",
+        "csv": "^6.3.11",
         "enum": "3.0.4",
         "ersatz-node-expat": "^0.1.6",
         "eslint-cli": "^1.1.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "mocha": "^10.8.2",
+        "mocha": "^11.0.1",
         "mocha-lcov-reporter": "^1.3.0",
-        "prettier": "^3.3.3",
+        "prettier": "^3.4.2",
         "should": "^13.2.3",
         "ts-node": "^10.9.2",
-        "typescript": "5.6.3"
+        "typescript": "5.7.2"
     },
     "typings": "./packages/node-opcua/node-opcua.d.ts",
+    "engines": {
+        "node": ">=16.0.0",
+        "pnpm": ">=8.0.0"
+    },
+    "dependenciesMeta": {
+        "*": {
+            "injected": true
+        }
+    },
     "dependencies": {
         "@ster5/global-mutex": "^2.0.0",
         "@types/async": "^3.2.24",
@@ -95,14 +104,14 @@
         "chalk": "4.1.2",
         "cli-table3": "^0.6.5",
         "cli-truncate": "2.1.0",
-        "csv-parse": "5.5.6",
+        "csv-parse": "5.6.0",
         "date-utils": "^1.2.21",
         "deassertify": "^0.2.0",
         "delayed": "^2.0.0",
         "dequeue": "^1.0.5",
         "easy-table": "^1.2.0",
         "env-paths": "2.2.1",
-        "eslint": "9.15.0",
+        "eslint": "9.17.0",
         "exit": "^0.1.2",
         "fqdn": "^0.0.3",
         "hexy": "0.3.5",
@@ -112,12 +121,13 @@
         "lockfile": "^1.0.4",
         "lodash": "4.17.21",
         "long": "4.0.0",
-        "memfs": "^4.14.0",
+        "memfs": "^4.15.0",
         "mkdirp": "1.0.4",
         "mocha-clean": "^1.0.0",
-        "node-opcua-crypto": "4.12.0",
-        "node-opcua-pki": "4.16.0",
+        "node-opcua-crypto": "4.15.0",
+        "node-opcua-pki": "4.17.0",
         "object.values": "^1.2.0",
+        "pnpm": "9.15.0",
         "pretty-ms": "^9.2.0",
         "progress": "^2.0.3",
         "rimraf": "6.0.1",
@@ -151,7 +161,7 @@
             "lodash@>=3.7.0 <4.17.19": ">=4.17.19",
             "lodash@<4.17.5": ">=4.17.5",
             "lodash@<4.17.12": ">=4.17.12",
-            "braces@<3.0.3": ">=3.0.3"
+            "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5"
         }
     }
 }
