--- a/packages/node-opcua-alarm-condition/package.json
+++ b/packages/node-opcua-alarm-condition/package.json
@@ -27,7 +27,7 @@
         "node-opcua-types": "2.139.0",
         "node-opcua-utils": "2.139.0",
         "node-opcua-variant": "2.139.0",
-        "thenify": "^3.3.1"
+        "thenify-ex": "4.2.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
