--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
         "source-map-support": "^0.5.21",
         "sprintf-js": "^1.1.3",
         "sterfive-bonjour-service": "1.1.4",
-        "thenify": "^3.3.1",
+        "thenify-ex": "4.2.0",
         "treeify": "^1.1.0",
         "tslib": "^2.8.1",
         "underscore": "^1.13.7",
