--- a/packages/node-opcua-server/package.json
+++ b/packages/node-opcua-server/package.json
@@ -60,7 +60,7 @@
         "node-opcua-types": "2.139.0",
         "node-opcua-utils": "2.139.0",
         "node-opcua-variant": "2.139.0",
-        "thenify": "^3.3.1"
+        "thenify-ex": "4.2.0"
     },
     "devDependencies": {
         "node-opcua-data-access": "2.139.0",
