--- a/packages/node-opcua-xml2json/package.json
+++ b/packages/node-opcua-xml2json/package.json
@@ -15,7 +15,7 @@
         "ltx": "^3.1.1",
         "node-opcua-assert": "2.139.0",
         "node-opcua-utils": "2.139.0",
-        "thenify": "^3.3.1",
+        "thenify-ex": "4.2.0",
         "xml-writer": "^1.7.0"
     },
     "author": "Etienne Rossignon",
