--- a/packages/node-opcua-client/package.json
+++ b/packages/node-opcua-client/package.json
@@ -25,7 +25,7 @@
         "node-opcua-client-dynamic-extension-object": "2.141.0",
         "node-opcua-common": "2.141.0",
         "node-opcua-constants": "2.139.0",
-        "node-opcua-crypto": "4.15.0",
+        "node-opcua-crypto": "4.16.0",
         "node-opcua-data-model": "2.139.0",
         "node-opcua-data-value": "2.139.0",
         "node-opcua-date-time": "2.139.0",
@@ -34,7 +34,7 @@
         "node-opcua-hostname": "2.139.0",
         "node-opcua-nodeid": "2.139.0",
         "node-opcua-object-registry": "2.139.0",
-        "node-opcua-pki": "4.18.0",
+        "node-opcua-pki": "5.1.0",
         "node-opcua-pseudo-session": "2.141.0",
         "node-opcua-schemas": "2.141.0",
         "node-opcua-secure-channel": "2.141.0",
@@ -65,8 +65,7 @@
         "node-opcua-binary-stream": "2.139.0",
         "node-opcua-factory": "2.139.0",
         "node-opcua-leak-detector": "2.139.0",
-        "node-opcua-nodesets": "2.139.0",
-        "underscore": "^1.13.7"
+        "node-opcua-nodesets": "2.139.0"
     },
     "eslintConfig": {
         "env": {
