--- a/packages/node-opcua-convert-nodeset-to-javascript/package.json
+++ b/packages/node-opcua-convert-nodeset-to-javascript/package.json
@@ -13,6 +13,7 @@
         "clean": "npx rimraf -g node_modules dist *.tsbuildinfo tmp"
     },
     "dependencies": {
+        "ts-morph": "25.0.1",
         "@types/wordwrap": "^1.0.3",
         "case-anything": "1.1.5",
         "chalk": "4.1.2",
