added unit test for issue 1436 / pull request 1437

--- a/packages/node-opcua-client-dynamic-extension-object/package.json
+++ b/packages/node-opcua-client-dynamic-extension-object/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc -b",
         "clean": "npx rimraf -g node_modules dist *.tsbuildinfo",
-        "test": "echo no test"
+        "test": "mocha"
     },
     "dependencies": {
         "chalk": "4.1.2",
