--- a/packages/node-opcua-address-space/package.json
+++ b/packages/node-opcua-address-space/package.json
@@ -41,6 +41,7 @@
         "node-opcua-numeric-range": "2.151.0",
         "node-opcua-object-registry": "2.139.0",
         "node-opcua-pseudo-session": "2.152.0",
+        "node-opcua-schemas": "2.151.0",
         "node-opcua-service-browse": "2.151.0",
         "node-opcua-service-call": "2.151.0",
         "node-opcua-service-history": "2.151.0",
