--- a/packages/node-opcua-file-transfer/package.json
+++ b/packages/node-opcua-file-transfer/package.json
@@ -22,6 +22,7 @@
         "node-opcua-binary-stream": "2.153.0",
         "node-opcua-constants": "2.139.0",
         "node-opcua-data-model": "2.153.0",
+        "node-opcua-data-value": "2.153.0",
         "node-opcua-debug": "2.153.0",
         "node-opcua-nodeid": "2.153.0",
         "node-opcua-pseudo-session": "2.153.0",
