--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
         "mocha-clean": "^1.0.0",
         "node-opcua-crypto": "4.16.0",
         "node-opcua-pki": "5.3.0",
+        "progress": "^2.0.3",
         "rimraf": "6.0.1",
         "semver": "^7.7.1",
         "sinon": "^20.0.0",
