--- a/packages/node-opcua-nodeset-ua/tsconfig.json
+++ b/packages/node-opcua-nodeset-ua/tsconfig.json
@@ -1,44 +1,26 @@
 {
-    "extends": "../tsconfig.common.json",
-    "compilerOptions": {
+  "extends": "../tsconfig.common.json",
+  "compilerOptions": {
         "rootDir": "source",
         "outDir": "dist",
         "composite": true
-    },
-    "include": [
-        "source/*.ts"
-    ],
-    "references": [
-        {
-            "path": "../node-opcua-address-space-base"
-        },
-        {
-            "path": "../node-opcua-basic-types"
-        },
-        {
-            "path": "../node-opcua-data-access"
-        },
-        {
-            "path": "../node-opcua-data-model"
-        },
-        {
-            "path": "../node-opcua-data-value"
-        },
-        {
-            "path": "../node-opcua-extension-object"
-        },
-        {
-            "path": "../node-opcua-nodeid"
-        },
-        {
-            "path": "../node-opcua-status-code"
-        },
-        {
-            "path": "../node-opcua-variant"
-        }
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+   },
+   "include": [
+        "source/*.ts",
+   ],
+   "references": [
+     { "path": "../node-opcua-address-space-base" },
+     { "path": "../node-opcua-basic-types" },
+     { "path": "../node-opcua-data-access" },
+     { "path": "../node-opcua-data-model" },
+     { "path": "../node-opcua-data-value" },
+     { "path": "../node-opcua-extension-object" },
+     { "path": "../node-opcua-nodeid" },
+     { "path": "../node-opcua-status-code" },
+     { "path": "../node-opcua-variant" }
+   ],
+   "exclude": [
+     "node_modules",
+     "dist"
+   ]
 }
